Basic processor functional

--- a/config.yaml
+++ b/config.yaml
@@ -1,15 +1,4 @@
-# config.yaml
-task: "Create a minimal droplet with terraform"
-processor:
+anthropic_api_key: ""
+grpc_server_addr: "localhost:50051"
+server:
   port: 8080
-  ai:
-    provider: "antrophic"
-    model: "gpt-4"
-    api_key: "${AI_API_KEY}"
-
-# executor:
-#   port: 9090
-#   github:
-#     token: "${GITHUB_TOKEN}"
-#     repository: "owner/repo"
-#     branch: "main"
